--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h2>Testing git remote</h2> 
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique accusamus nam, rem earum dolorum omnis ad non dolore laboriosam eos fugit quam rerum nostrum doloribus iste sequi corporis deserunt repellendus.</p>
 </body>
 </html>
